first fully working example

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <div id="hacker-interface-bg"></div>
     <div id="hacker-interface-blur"></div>
+    <span class="haxxx">HACKER<br>ALERT</span>
     <div id="holder">
         <span id="content"></span><span class="cursor">_</span>
     </div>
