--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="holder">
         <span id="content"></span><span class="cursor">_</span>
     </div>
+    <div id="credits"><a href="http://github.com/maxmackie/tracert">What the hell is this?</a> Created as a joke by <a href="http://maxmackie.com">Max Mackie</a>.</div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="js/hax.js"></script>
 </body>
