--- a/index.html
+++ b/index.html
@@ -13,5 +13,23 @@
     <div id="credits"><a href="http://github.com/maxmackie/tracert">What the hell is this?</a> Created as a joke by <a href="http://maxmackie.com">Max Mackie</a>.</div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="js/hax.js"></script>
+    <!-- Start of Woopra Code -->
+    <script type="text/javascript">
+    function woopraReady(tracker) {
+        tracker.setDomain('tracert.ca');
+        tracker.setIdleTimeout(300000);
+        tracker.track();
+        return false;
+    }
+    (function() {
+        var wsc = document.createElement('script');
+        wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
+        wsc.type = 'text/javascript';
+        wsc.async = true;
+        var ssc = document.getElementsByTagName('script')[0];
+        ssc.parentNode.insertBefore(wsc, ssc);
+    })();
+    </script>
+    <!-- End of Woopra Code -->
 </body>
 </html>
